# OTUS

./: README.md
.github/workflows/: build.yml  build_allocators.yml
allocators/: CMakeLists.txt
allocators/src/: CMakeLists.txt  main.cpp
allocators/src/my_allocator/: CMakeLists.txt  my_allocator.h
allocators/src/my_container/: CMakeLists.txt  my_container.h
allocators/src/version_lib/: CMakeLists.txt  get_version.cpp
allocators/tests/: CMakeLists.txt
allocators/tests/my_allocator_tests/: CMakeLists.txt  my_allocator_tests.cpp
allocators/tests/my_container_tests/: CMakeLists.txt  my_container_tests.cpp
allocators/tests/version_lib_tests/: CMakeLists.txt  version_lib_tests.cpp
test_homework/: CMakeLists.txt  main.cpp
